# AI-InOps

./: .gitignore  .vercelignore  README.md  pipeline_demo.py  verify.py
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  report.py  scenarios.py  service.py
backend/app/routers/: data.py  datasets.py  forecast.py  report.py  simulate.py  transport.py  warehouse.py
backend/core/: data_generator.py  dataset.py  forecasting.py  metrics.py  scenarios.py  supplier.py  transportation.py  warehouse.py
backend/tests/: conftest.py  test_dataset.py  test_endpoints.py  test_proxy_prefix.py  test_scenarios.py
core/: data_generator.py  forecasting.py  supplier.py  warehouse.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/__tests__/: MatrixEditor.test.tsx  ScenarioToggle.test.tsx  UploadCard.test.tsx  api.test.ts  store.test.ts
frontend/app/: globals.css  layout.tsx
frontend/app/data/: page.tsx
frontend/app/forecasting/: page.tsx
frontend/components/: AsyncBoundary.tsx  DeltaBanner.tsx  DownloadReportButton.tsx  Footer.tsx  Header.tsx  Icon.tsx  KeepAlive.tsx  KpiCard.tsx  Logo.tsx  MatrixEditor.tsx  PageHeader.tsx  Panel.tsx  RequireDataset.tsx  ScenarioToggle.tsx  Sidebar.tsx  Skeleton.tsx  Slider.tsx  StatusChip.tsx  UploadCard.tsx
frontend/lib/: api.ts  format.ts  inputs.ts  nav.ts  types.ts  useApi.ts
frontend/store/: useScenarioStore.ts
(+5 files in other folders)
