[project]
name = "digital-twin-backend"
version = "1.0.0"
description = "Digital Twin backend — FastAPI over the verified OR engine"
requires-python = ">=3.11"
# Runtime dependencies (what Vercel's uv installs). Kept lean; the heavy
# dev-only libraries live in the optional 'dev' group below.
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "python-multipart==0.0.9",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "reportlab==4.2.0",
    "matplotlib==3.9.0",
]

[project.optional-dependencies]
dev = [
    "scipy==1.13.1",
    "statsmodels==0.14.2",
    "scikit-learn==1.5.0",
    "httpx==0.27.0",
    "pytest==8.2.2",
    "ruff==0.4.10",
    "black==24.4.2",
]

# Treat this as an application, not a distributable package: uv manages the
# environment and installs dependencies but does not try to build the project
# itself (so no build backend is required).
[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:pyparsing.*",
]
